crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_list_item_first_line_heading_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..14
  LIST@0..14
    LIST_ITEM@0..14
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..14
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        HEADING@4..14
          ATX_HEADING_MARKER@4..5
            ATX_HEADING_MARKER@4..5 "#"
          WHITESPACE@5..6 " "
          HEADING_CONTENT@6..13
            TEXT@6..13 "heading"
          NEWLINE@13..14 "\n"
