crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_list_item_first_line_hr_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..8
  LIST@0..8
    LIST_ITEM@0..8
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..8
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        HORIZONTAL_RULE@4..8
          HORIZONTAL_RULE@4..7 "---"
          NEWLINE@7..8 "\n"
