crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_blockquote_list_item_first_line_html_div_multiline_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..31
  LIST@0..31
    LIST_ITEM@0..31
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..31
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        HTML_BLOCK_DIV@4..31
          HTML_BLOCK_TAG@4..10
            TEXT@4..8 "<div"
            TEXT@8..9 ">"
            NEWLINE@9..10 "\n"
          PARAGRAPH@10..20
            WHITESPACE@10..12 "  "
            BLOCK_QUOTE_MARKER@12..13 ">"
            WHITESPACE@13..14 " "
            TEXT@14..19 "hello"
            NEWLINE@19..20 "\n"
          HTML_BLOCK_TAG@20..31
            WHITESPACE@20..21 " "
            WHITESPACE@21..22 " "
            BLOCK_QUOTE_MARKER@22..23 ">"
            WHITESPACE@23..24 " "
            TEXT@24..30 "</div>"
            NEWLINE@30..31 "\n"
